welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: illegal start of simple pattern
	var new T:Array[Int] (nums.length);
            ^noTriples:2: error: '=' expected but ';' found.
	var new T:Array[Int] (nums.length);
                                          ^